# Brix

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  brix.sh  makefile  servidor  shell.nix  urubu.sh
Server/: ServerManager.cpp
client/: CMakeLists.txt
client/src/: client_UDP_broadcast.cpp  client_UDP_broadcast.h  client_discovery_protocol.cpp  client_discovery_protocol.h  main.cpp
client/src/data_transfer/: client_request_transfer.cpp  client_request_transfer.h
common/: CMakeLists.txt
common/include/: date_time_utils.h  unordered_map_extensions.h
common/src/: colors.h  date_time_utils.cpp  date_time_utils.h  unordered_map_extensions.cpp
common/src/data_transfer/: socket_utils.cpp  socket_utils.h
common/src/packets/: packets.cpp  packets.h  string_packets.cpp  string_packets.h
server/: CMakeLists.txt
server/src/: main.cpp  ports.h  server_UDP_greeter.cpp  server_UDP_greeter.h
server/src/db_manager/: db_manager.cpp  db_manager.h
server/src/db_synchronizer/: db_synchronizer.cpp  db_synchronizer.h
server/src/election/: heartbeat.cpp  heartbeat.h  redundancy_manager.cpp  redundancy_manager.h  single_socket_election.cpp
server/src/greeter/: server_UDP_greeter.cpp  server_UDP_greeter.h  server_discovery_service.cpp  server_discovery_service.h
server/src/multiplexer/: packet_indexer.cpp  packet_indexer.h  packet_multiplexer.cpp  packet_multiplexer.h
server/src/request_handler/: KIL_packet_handler.cpp  KIL_packet_handler.h  REQ_packet_handler.cpp  REQ_packet_handler.h
server/src/test/: test_file.cpp  test_file.h
